.metadata/.plugins/org.eclipse.cdt.ui/Laboratorio-3.build.log
22:06:10 **** Incremental Build of configuration Debug for project Laboratorio-3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Temporal.o" "..\\src\\Clases\\Temporal.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Desarrollador.o" "..\\src\\Clases\\Desarrollador.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controladores\\ControladorUsuario.o" "..\\src\\Controladores\\ControladorUsuario.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtVideojuego.o" "..\\src\\DataTypes\\DtVideojuego.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Partida.o" "..\\src\\Clases\\Partida.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtPartidaIndividual.o" "..\\src\\DataTypes\\DtPartidaIndividual.cpp" 
..\src\DataTypes\DtPartidaIndividual.cpp: In constructor 'DtPartidaIndividual::DtPartidaIndividual(bool)':
..\src\DataTypes\DtPartidaIndividual.cpp:10:71: error: no matching function for call to 'DtPartida::DtPartida()'
 DtPartidaIndividual::DtPartidaIndividual(bool continuarPartidaAnterior) {
                                                                       ^
In file included from ..\src\DataTypes\DtPartidaIndividual.h:11:0,
                 from ..\src\DataTypes\DtPartidaIndividual.cpp:8:
..\src\DataTypes\DtPartida.h:18:2: note: candidate: DtPartida::DtPartida(int, DtFechaHora*, std::__cxx11::string)
  DtPartida(int, DtFechaHora*, string);
  ^~~~~~~~~
..\src\DataTypes\DtPartida.h:18:2: note:   candidate expects 3 arguments, 0 provided
..\src\DataTypes\DtPartida.h:16:7: note: candidate: DtPartida::DtPartida(const DtPartida&)
 class DtPartida {
       ^~~~~~~~~
..\src\DataTypes\DtPartida.h:16:7: note:   candidate expects 1 argument, 0 provided

22:06:14 Build Failed. 1 errors, 0 warnings. (took 3s.260ms)

